Added remaining sections; todo, make mobile

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <div class="grid">
 
-            <div class="grid__col grid__col--2-of-5">
+            <div class="grid__col grid__col--4-of-12">
 
                 <div class="grid nav">
                     <div class="grid__col grid__col--push-1-of-12">
@@ -27,12 +27,11 @@
                         <p>Let's build some cool stuff</p>
                         <a href="#" class="button">Sign Up!</a>
                     </div>
-
                 </div>
 
             </div>
 
-            <div class="grid__col grid__col--3-of-5 svg-div">
+            <div class="grid__col grid__col--8-of-12 svg-div">
                 <object type="image/svg+xml" data="./assets/svg-splash.svg" class="logo" id="buildgt-svg">
                     BuildGT Graphic
                 </object>
@@ -40,6 +39,135 @@
 
 
         </div>
+
+        <div id="about">
+
+            <div class="grid the-event">
+                <div class="grid__col grid__col--7-of-12 grid__col--push-1-of-12">
+                    <h1>The Event</h1>
+                    <p>HackGT is proud to present you with BuildGT! Everyone is welcome to apply &mdash; no experience required! In a span of 12 hours, you will work in teams of up to four people to create a prototype of a viable product!</p>
+                </div>
+            </div>
+
+            <div id="schedule" class="grid">
+                <div class="grid__col grid__col--11-of-12 grid__col--push-1-of-12">
+                    <h1>Schedule</h1>
+                </div>
+
+                <div class="grid__col grid__col--5-of-12 grid__col--push-1-of-12">
+                    <h3>Day 1</h3>
+
+                    <table>
+                        <tbody>
+                            <tr>
+                                <td>Registration</td>
+                                <td>7:00 - 7:30PM</td>
+                            </tr>
+                            <tr>
+                                <td>Event Kickoff</td>
+                                <td>7:30 - 8:00PM</td>
+                            </tr>
+                            <tr>
+                                <td>Presentations</td>
+                                <td>8:00 - 8:30PM</td>
+                            </tr>
+                            <tr>
+                                <td>Team Formation</td>
+                                <td>8:30 - 9:00PM</td>
+                            </tr>
+                            <tr>
+                                <td>Hacking Begins</td>
+                                <td>9:00PM</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="grid__col grid__col--5-of-12">
+                    <h3>Day 2</h3>
+
+                    <table>
+                        <tbody>
+                            <tr>
+                                <td>Registration</td>
+                                <td>7:00 - 7:30PM</td>
+                            </tr>
+                            <tr>
+                                <td>Event Kickoff</td>
+                                <td>7:30 - 8:00PM</td>
+                            </tr>
+                            <tr>
+                                <td>Presentations</td>
+                                <td>8:00 - 8:30PM</td>
+                            </tr>
+                            <tr>
+                                <td>Team Formation</td>
+                                <td>8:30 - 9:00PM</td>
+                            </tr>
+                            <tr>
+                                <td>Hacking Begins</td>
+                                <td>9:00PM</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
+            <div id="faq" class="grid">
+                <div class="grid__col grid__col--11-of-12 grid__col--push-1-of-12">
+                    <h1>FAQ&rsquo;s</h1>
+                </div>
+
+                <div class="grid__col grid__col--5-of-12 grid__col--push-1-of-12">
+                    <h2>What is a hackathon</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+                    <h2>What is a hackathon</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+                    <h2>What is a hackathon</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+                    <h2>What is a hackathon</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
+                <div class="grid__col grid__col--5-of-12">
+                    <h2>What is a hackathon</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+                    <h2>What is a hackathon</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+                    <h2>What is a hackathon</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+                    <h2>What is a hackathon</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
+            </div>
+
+            <div class="grid">
+                <div class="grid__col grid__col--7-of-12 grid__col--push-1-of-12">
+                    <h1>About Us</h1>
+                    <p>HackGT is super duper super duper super duper super duper super duper super duper super duper super duper super duper super duper super duper super duper super duper super duper super duper super duper super duper super duper super duper cool</p>
+                </div>
+            </div>
+
+
+        </div>
+
+        <div class="green" id="sponsors">
+            <div class="grid">
+                <div class="grid__col grid__col--7-of-12 grid__col--push-1-of-12">
+                    <h1>Sponsors</h1>
+                    <p>Sponsors to be added soon!</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="footer">
+                    <p>Made with &lt;3 by the HackGTeam</p>
+        </div>
+
 
         <script src="./js/script.js"></script> 
 
