--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
 
     <body>
 
-        <div class="grid">
+        <div class="grid no-mobile-padding">
+
+            <div class="grid__col grid__col--8-of-12 svg-div">
+                <object type="image/svg+xml" data="./assets/svg-splash.svg" class="logo" id="buildgt-svg">
+                    BuildGT Graphic
+                </object>
+            </div>
 
             <div class="grid__col grid__col--4-of-12">
 
                 <div class="grid nav">
-                    <div class="grid__col grid__col--push-1-of-12">
+                    <div class="grid__col grid__col--2-of-2 grid__col--push-1-of-12">
                         <a href="#about">About</a>
                         <a href="#sponsors">Sponsors</a>
                         <a href="#faq">FAQ</a>
@@ -21,7 +27,7 @@
                 </div>
 
                 <div class="grid header">
-                    <div class="grid__col grid__col--push-2-of-8">
+                    <div class="grid__col grid__col--2-of-2 grid__col--push-2-of-8">
                         <h1>Build<span class="blue">GT</span></h1>
                         <p>March 9th - 10th, 2018</p>
                         <p>Let's build some cool stuff</p>
@@ -29,12 +35,6 @@
                     </div>
                 </div>
 
-            </div>
-
-            <div class="grid__col grid__col--8-of-12 svg-div">
-                <object type="image/svg+xml" data="./assets/svg-splash.svg" class="logo" id="buildgt-svg">
-                    BuildGT Graphic
-                </object>
             </div>
 
 
