--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="grid the-event">
                 <div class="grid__col grid__col--7-of-12 grid__col--push-1-of-12">
                     <h1>The Event</h1>
-                    <p>HackGT is proud to present you with BuildGT! Everyone is welcome to apply &mdash; no experience required! In a span of 12 hours, you will work in teams of up to four people to create a prototype of a viable product!</p>
+                    <p>HackGT is proud to host this year's 2018 hardware hackathon! During the 12-hour hackathon, students will the opportunities to hack on an expansive list of hardware and participate in workshops put on Invention Studio Prototyping Instructors!</p>
                 </div>
             </div>
 
