--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
                 </div>
 
                 <div class="grid__col grid__col--5-of-12 grid__col--push-1-of-12">
-                    <h3>Day 1</h3>
+                    <p>TBD!</p>
+<!--                     <h3>Day 1</h3>
 
                     <table>
                         <tbody>
@@ -81,10 +82,10 @@
                                 <td>9:00PM</td>
                             </tr>
                         </tbody>
-                    </table>
+                    </table> -->
                 </div>
                 <div class="grid__col grid__col--5-of-12">
-                    <h3>Day 2</h3>
+<!--                     <h3>Day 2</h3>
 
                     <table>
                         <tbody>
@@ -109,7 +110,7 @@
                                 <td>9:00PM</td>
                             </tr>
                         </tbody>
-                    </table>
+                    </table> -->
                 </div>
             </div>
 
@@ -120,36 +121,55 @@
 
                 <div class="grid__col grid__col--5-of-12 grid__col--push-1-of-12">
                     <h2>What is a hackathon</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-
-                    <h2>What is a hackathon</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-
-                    <h2>What is a hackathon</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-
-                    <h2>What is a hackathon</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p>Hackathons are events where teams of students spend a weekend utilizing resources and support that we provide to bring their ideas to life. These projects range from mobile applications to drones to embedded hardware and more!</p>
                 </div>
+
                 <div class="grid__col grid__col--5-of-12">
-                    <h2>What is a hackathon</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-
-                    <h2>What is a hackathon</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-
-                    <h2>What is a hackathon</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-
-                    <h2>What is a hackathon</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <h2>What if I don't have a team</h2>
+                    <p>We will have a mixer at the start of the event to help you find a team! Additionally, we will be making a Facebook group for attendees to share their ideas and find a team before the event.</p>
                 </div>
+
+
+
+                <div class="grid__col grid__col--5-of-12 grid__col--push-1-of-12">
+                    <h2>How long is the hackathon?</h2>
+                    <p>This year's event is from 9am to 9pm on March 10th.</p>
+                </div>
+
+                <div class="grid__col grid__col--5-of-12">
+                    <h2>Can I keep what I build?</h2>
+                    <p>TBD</p>
+                </div>
+
+
+                <div class="grid__col grid__col--5-of-12 grid__col--push-1-of-12">
+                    <h2>What hardware will be there?</h2>
+                    <p>You can find a full list of hardware at <a href="http://hardware.hack.gt">hardware.hack.gt</a></p>
+                </div>
+
+                <div class="grid__col grid__col--5-of-12">
+                    <h2>How does judging work?</h2>
+                    <p>TBD</p>
+                </div>
+
+
+
+                <div class="grid__col grid__col--5-of-12 grid__col--push-1-of-12">
+                    <h2>Who can attend?</h2>
+                    <p>Anyone can attend! With the resources provided and beginner-friendly workshops, students from any background can come and enjoy!</p>
+                </div>
+
+                <div class="grid__col grid__col--5-of-12">
+                    <h2>What size should teams be?</h2>
+                    <p>The max team size is 5 people.</p>
+                </div>
+
             </div>
 
             <div class="grid">
                 <div class="grid__col grid__col--7-of-12 grid__col--push-1-of-12">
                     <h1>About Us</h1>
-                    <p>HackGT is super duper super duper super duper super duper super duper super duper super duper super duper super duper super duper super duper super duper super duper super duper super duper super duper super duper super duper super duper cool</p>
+                    <p>HackGT is a 501(c)(4) nonprofit and student organization consisting of Georgia Tech undergraduate students focused on being the drivers of computer science outreach in the Georgia Tech, state, and national communities. Through throwing large-scale collegiate hackathons of upwards of 1000 people to small-scale hackathons and workshops, our organization aims to spread the spirit of application, innovation, and creativity in computer science education.</p>
                 </div>
             </div>
 
