--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="grid header">
                     <div class="grid__col grid__col--2-of-2 grid__col--push-2-of-8">
                         <h1>Build<span class="blue">GT</span></h1>
-                        <p>March 9th - 10th, 2018</p>
+                        <p>March 10th, 2018</p>
                         <p>Let's build some cool stuff</p>
                         <a href="#" class="button">Sign Up!</a>
                     </div>
