--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>BuildGT</title>
@@ -186,7 +187,7 @@
         </div>
 
         <div class="footer">
-                    <p>Made with &lt;3 by the HackGTeam</p>
+            <p>Made with &lt;3 by the HackGTeam</p>
         </div>
 
 
