--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="./css/toast.css"/>
         <link rel="stylesheet" href="./css/main.css"/>
         <script src="./js/snap.svg-min.js"></script>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
     </head>
 
     <body>
