Add registration link to site

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <h1>Build<span class="blue">GT</span></h1>
                         <p>March 10th, 2018</p>
                         <p>Let's build some cool stuff</p>
-                        <a href="#" class="button">Sign Up!</a>
+                        <a href="https://registration.build.hack.gt" class="button">Sign Up!</a>
                     </div>
                 </div>
 
