updated site text

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="grid the-event">
                 <div class="grid__col grid__col--7-of-12 grid__col--push-1-of-12">
                     <h1>The Event</h1>
-                    <p>HackGT is proud to host this year's 2018 hardware hackathon! During the 12-hour hackathon, students will the opportunities to hack on an expansive list of hardware and participate in workshops put on Invention Studio Prototyping Instructors!</p>
+                    <p>During the 12-hour hackathon, students will have the opportunity to hack on an expansive list of hardware. Feel as if you're not ready? No worries! We will have a myriad of workshops and crash courses available.</p>
                 </div>
             </div>
 
@@ -57,33 +57,44 @@
                 </div>
 
                 <div class="grid__col grid__col--5-of-12 grid__col--push-1-of-12">
-                    <p>TBD!</p>
-<!--                     <h3>Day 1</h3>
-
                     <table>
                         <tbody>
                             <tr>
-                                <td>Registration</td>
-                                <td>7:00 - 7:30PM</td>
+                                <td>Check-in</td>
+                                <td>8:00 - 8:30AM</td>
                             </tr>
                             <tr>
                                 <td>Event Kickoff</td>
-                                <td>7:30 - 8:00PM</td>
+                                <td>8:30 - 9:00AM</td>
                             </tr>
                             <tr>
-                                <td>Presentations</td>
-                                <td>8:00 - 8:30PM</td>
+                                <td>Hacking Starts</td>
+                                <td>9:00AM</td>
                             </tr>
                             <tr>
-                                <td>Team Formation</td>
-                                <td>8:30 - 9:00PM</td>
+                                <td>Lunch</td>
+                                <td>12:00 - 1:00PM</td>
                             </tr>
                             <tr>
-                                <td>Hacking Begins</td>
+                                <td>Dinner</td>
+                                <td>6:00 - 7:00PM</td>
+                            </tr>
+                            <tr>
+                                <td>Hacking Ends</td>
                                 <td>9:00PM</td>
                             </tr>
+                            <tr>
+                                <td>Expo</td>
+                                <td>9:00 - 9:45PM</td>
+                            </tr>
+                            <tr>
+                                <td>Closing Ceremony</td>
+                                <td>9:45 - 10:15PM</td>
+                            </tr>                            
                         </tbody>
-                    </table> -->
+                    </table>
+
+                    <p>The workshop schedule will be available soon! Workshops will last an hour, followed by an hour of office hours for that specific workshop.</p>
                 </div>
                 <div class="grid__col grid__col--5-of-12">
 <!--                     <h3>Day 2</h3>
@@ -112,7 +123,7 @@
                             </tr>
                         </tbody>
                     </table> -->
-                </div>
+                </div>      
             </div>
 
             <div id="faq" class="grid">
@@ -122,7 +133,7 @@
 
                 <div class="grid__col grid__col--5-of-12 grid__col--push-1-of-12">
                     <h2>What is a hackathon</h2>
-                    <p>Hackathons are events where teams of students spend a weekend utilizing resources and support that we provide to bring their ideas to life. These projects range from mobile applications to drones to embedded hardware and more!</p>
+                    <p>Hackathons are events where teams of students spend a period of time utilizing resources and support that we provide to bring their ideas to life. These projects range from mobile applications to drones to embedded hardware and more!</p>
                 </div>
 
                 <div class="grid__col grid__col--5-of-12">
@@ -139,7 +150,7 @@
 
                 <div class="grid__col grid__col--5-of-12">
                     <h2>Can I keep what I build?</h2>
-                    <p>TBD</p>
+                    <p>Checked out hardware such as Raspberry Pis, Oculus Rifts, etc. are the only things you cannot keep.</p>
                 </div>
 
 
@@ -150,19 +161,19 @@
 
                 <div class="grid__col grid__col--5-of-12">
                     <h2>How does judging work?</h2>
-                    <p>TBD</p>
+                    <p>During the expo, projects will be judged on a variety of factors such as technical prowess, usability, and creativity.</p>
                 </div>
 
 
 
                 <div class="grid__col grid__col--5-of-12 grid__col--push-1-of-12">
                     <h2>Who can attend?</h2>
-                    <p>Anyone can attend! With the resources provided and beginner-friendly workshops, students from any background can come and enjoy!</p>
+                    <p>Anyone 18 years or older can attend! With the resources provided and beginner-friendly workshops, students from any background can come and enjoy!</p>
                 </div>
 
                 <div class="grid__col grid__col--5-of-12">
                     <h2>What size should teams be?</h2>
-                    <p>The max team size is 5 people.</p>
+                    <p>The max team size is 4 people.</p>
                 </div>
 
             </div>
@@ -177,14 +188,14 @@
 
         </div>
 
-        <div class="green" id="sponsors">
+<!--         <div class="green" id="sponsors">
             <div class="grid">
                 <div class="grid__col grid__col--7-of-12 grid__col--push-1-of-12">
                     <h1>Sponsors</h1>
                     <p>Sponsors to be added soon!</p>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <div class="footer">
             <p>Made with &lt;3 by the HackGTeam</p>
