--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="grid nav">
                     <div class="grid__col grid__col--2-of-2 grid__col--push-1-of-12">
                         <a href="#about">About</a>
-                        <a href="#sponsors">Sponsors</a>
+                        <!-- <a href="#sponsors">Sponsors</a> -->
                         <a href="#faq">FAQ</a>
                     </div>
                 </div>
