Actually link about

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 
         </div>
 
-        <div id="about">
+        <div id="info">
 
             <div class="grid the-event">
                 <div class="grid__col grid__col--7-of-12 grid__col--push-1-of-12">
-                    <h1>The Event</h1>
+                    <h1 id="about">The Event</h1>
                     <p>HackGT is proud to host this year's 2018 hardware hackathon! During the 12-hour hackathon, students will the opportunities to hack on an expansive list of hardware and participate in workshops put on Invention Studio Prototyping Instructors!</p>
                 </div>
             </div>
