update hardware faq

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
                 <div class="grid__col grid__col--5-of-12 grid__col--push-1-of-12">
                     <h2>What hardware will be there?</h2>
-                    <p>You can find a full list of hardware at <a href="http://hardware.hack.gt">hardware.hack.gt</a></p>
+                    <p>We'll be providing lots of hardware, including Arduinos, Oculus Rifts, Raspberry Pis, and more! The full list of available hardware will be released on Thursday, March 1st.</p>
                 </div>
 
                 <div class="grid__col grid__col--5-of-12">
