fix typos and fb link

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <div class="grid__col grid__col--2-of-2 grid__col--push-2-of-8">
                         <h1>Build<span class="blue">GT</span></h1>
                         <p>March 10th, 2018</p>
-                        <p>Let's build some cool stuff</p>
+                        <p>Ready. Set. Build.</p>
                         <a href="https://registration.build.hack.gt" class="button">Sign Up!</a>
                     </div>
                 </div>
@@ -132,13 +132,13 @@
                 </div>
 
                 <div class="grid__col grid__col--5-of-12 grid__col--push-1-of-12">
-                    <h2>What is a hackathon</h2>
+                    <h2>What is a hackathon?</h2>
                     <p>Hackathons are events where teams of students spend a period of time utilizing resources and support that we provide to bring their ideas to life. These projects range from mobile applications to drones to embedded hardware and more!</p>
                 </div>
 
                 <div class="grid__col grid__col--5-of-12">
-                    <h2>What if I don't have a team</h2>
-                    <p>We will have a mixer at the start of the event to help you find a team! Additionally, we will be making a Facebook group for attendees to share their ideas and find a team before the event.</p>
+                    <h2>What if I don't have a team?</h2>
+                    <p>We will have a mixer at the start of the event to help you find a team! Additionally, we have a <a href="https://www.facebook.com/events/2084994155066118/">Facebook event</a> for attendees to share their ideas and find a team before the event.</p>
                 </div>
 
 
