--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     <div class="grid__col grid__col--2-of-2 grid__col--push-2-of-8">
                         <h1>Build<span class="blue">GT</span></h1>
                         <p>March 10th, 2018</p>
+                        <p>Love Manufacturing Building</p>
                         <p>Ready. Set. Build.</p>
                         <a href="https://registration.build.hack.gt" class="button">Sign Up!</a>
                     </div>
