--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 
                 <div class="grid header">
                     <div class="grid__col grid__col--2-of-2 grid__col--push-2-of-8">
-                        <h1>Build<span class="blue">GT</span></h1>
+                        <h6 id="presents">HackGT + Invention Studio presents:</h6>
+                        <h1 id="title">Build<span class="blue">GT</span></h1>
                         <p>March 10th, 2018</p>
                         <p>Love Manufacturing Building</p>
                         <p>Ready. Set. Build.</p>
@@ -48,7 +49,7 @@
             <div class="grid the-event">
                 <div class="grid__col grid__col--7-of-12 grid__col--push-1-of-12">
                     <h1 id="about">The Event</h1>
-                    <p>During the 12-hour hackathon, students will have the opportunity to hack on an expansive list of hardware. Feel as if you're not ready? No worries! We will have a myriad of workshops and crash courses available.</p>
+                    <p>During the 12-hour hackathon, students will have the opportunity to hack on an expansive list of hardware. Feel as if you're not ready? No worries! We will have a myriad of workshops and crash courses put on by Invention Studio Prototyping Instructors (PIs)!</p>
                 </div>
             </div>
 
@@ -95,7 +96,7 @@
                         </tbody>
                     </table>
 
-                    <p>The workshop schedule will be available soon! Workshops will last an hour, followed by an hour of office hours for that specific workshop.</p>
+                    <p>The workshop schedule will be available soon! Workshops, held at the Invention Studio, will last an hour, followed by an hour of office hours for that specific workshop. There will also be thirty minute crash courses on some of the Invention Studio’s tools, including laser cutters, 3D printers, and more.</p>
                 </div>
                 <div class="grid__col grid__col--5-of-12">
 <!--                     <h3>Day 2</h3>
@@ -183,6 +184,8 @@
                 <div class="grid__col grid__col--7-of-12 grid__col--push-1-of-12">
                     <h1>About Us</h1>
                     <p>HackGT is a 501(c)(4) nonprofit and student organization consisting of Georgia Tech undergraduate students focused on being the drivers of computer science outreach in the Georgia Tech, state, and national communities. Through throwing large-scale collegiate hackathons of upwards of 1000 people to small-scale hackathons and workshops, our organization aims to spread the spirit of application, innovation, and creativity in computer science education.</p>
+
+                    <p>The Invention Studio is a student-run makerspace open to all Georgia Tech students. To support and foster the demand for creative, self-initiated learning on the Georgia Tech campus, the Invention Studio creates environments for students to make their ideas a reality by providing resources for designing, prototyping, and sharing ideas through workshops, vendor networks, experienced guidance, and access to cutting edge machines.</p>
                 </div>
             </div>
 
