added team formation to schedule

--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
                                 <td>9:00AM</td>
                             </tr>
                             <tr>
+                                <td>Team Formation Session</td>
+                                <td>9:00AM</td>
+                            </tr>
+                            <tr>
                                 <td>Lunch</td>
                                 <td>12:00 - 1:00PM</td>
                             </tr>
