Add favicon and facebook tags

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
         <link rel="stylesheet" href="./css/main.css"/>
         <script src="./js/snap.svg-min.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+        <meta property="og:title" content="BuildGT"/>
+        <meta property="og:description" content="HackGT's hardware hackathon!"/>
+        <meta property="og:image" content="https://build.gt/assets/preview.png" />
+        <link rel="shortcut icon" href="./favicon.ico"/>
     </head>
 
     <body>
