--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         </tbody>
                     </table>
 
-                    <p>The workshop schedule will be available soon! Workshops, held at the Invention Studio, will last an hour, followed by an hour of office hours for that specific workshop. There will also be thirty minute crash courses on some of the Invention Studio’s tools, including laser cutters, 3D printers, and more.</p>
+                    <p>The workshop schedule will be available soon! Workshops, held at the Invention Studio, will last an hour, followed by an hour of office hours for that specific workshop. There will also be thirty minute crash courses on some of the Invention Studio&rsquo;s tools, including laser cutters, 3D printers, and more.</p>
                 </div>
                 <div class="grid__col grid__col--5-of-12">
 <!--                     <h3>Day 2</h3>
