add invention studio open/close to schedule

--- a/index.html
+++ b/index.html
@@ -82,12 +82,20 @@
                                 <td>9:00AM</td>
                             </tr>
                             <tr>
+                                <td>Invention Studio Opens</td>
+                                <td>10:00AM</td>
+                            </tr>
+                            <tr>
                                 <td>Lunch</td>
                                 <td>12:00 - 1:00PM</td>
                             </tr>
                             <tr>
                                 <td>Dinner</td>
                                 <td>6:00 - 7:00PM</td>
+                            </tr>
+                            <tr>
+                                <td>Invention Studio Closes</td>
+                                <td>8:00PM</td>
                             </tr>
                             <tr>
                                 <td>Hacking Ends</td>
@@ -104,7 +112,7 @@
                         </tbody>
                     </table>
 
-                    <p>The workshop schedule will be available soon! Workshops, held at the Invention Studio, will last an hour, followed by an hour of office hours for that specific workshop. There will also be thirty minute crash courses on some of the Invention Studio&rsquo;s tools, including laser cutters, 3D printers, and more.</p>
+                    <p>The workshop schedule will be available soon! Invention Studio PIs will be holding Raspberry Pi, Arduino, Oculus Rift, and Pebble workshops. There will also be crash courses on some of the Invention Studio&rsquo;s tools, including laser cutters, 3D printers, and more.</p>
                 </div>
                 <div class="grid__col grid__col--5-of-12">
 <!--                     <h3>Day 2</h3>
