Add workshop schedule

--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
                 </div>
 
                 <div class="grid__col grid__col--5-of-12 grid__col--push-1-of-12">
+                    <h3>Main Schedule</h3>
+
                     <table>
                         <tbody>
                             <tr>
@@ -112,35 +114,39 @@
                         </tbody>
                     </table>
 
-                    <p>The workshop schedule will be available soon! Invention Studio PIs will be holding Raspberry Pi, Arduino, Oculus Rift, and Pebble workshops. There will also be crash courses on some of the Invention Studio&rsquo;s tools, including laser cutters, 3D printers, and more.</p>
+                    <p>Invention Studio PIs will be holding Raspberry Pi, Arduino, Oculus Rift, and Pebble workshops. There will also be crash courses on some of the Invention Studio&rsquo;s tools, including laser cutters, 3D printers, and more.</p>
                 </div>
                 <div class="grid__col grid__col--5-of-12">
-<!--                     <h3>Day 2</h3>
+                    <h3>Workshop Schedule</h3>
 
                     <table>
                         <tbody>
                             <tr>
-                                <td>Registration</td>
-                                <td>7:00 - 7:30PM</td>
+                                <td>Design Bloc Ideation Workshop</td>
+                                <td>9:30am</td>
                             </tr>
                             <tr>
-                                <td>Event Kickoff</td>
-                                <td>7:30 - 8:00PM</td>
+                                <td>Oculus, Pebble, Arduino, Raspi Workshops, Session 1</td>
+                                <td>11:00am</td>
                             </tr>
                             <tr>
-                                <td>Presentations</td>
-                                <td>8:00 - 8:30PM</td>
+                                <td>Crash Course #1</td>
+                                <td>12:00pm</td>
                             </tr>
                             <tr>
-                                <td>Team Formation</td>
-                                <td>8:30 - 9:00PM</td>
+                                <td>Oculus, Pebble, Arduino, Raspi Workshops, Session 1</td>
+                                <td>1:00pm</td>
                             </tr>
                             <tr>
-                                <td>Hacking Begins</td>
-                                <td>9:00PM</td>
+                                <td>Crash Course #2</td>
+                                <td>2:00pm</td>
+                            </tr>
+                            <tr>
+                                <td>Crash Course #3</td>
+                                <td>4:00pm</td>
                             </tr>
                         </tbody>
-                    </table> -->
+                    </table>
                 </div>      
             </div>
 
